Refinar la API de compra/venta de bonds
Se añade un endpoint para crear una oferta de venta y una forma de listar bond series con ofertas activas

Se cambia el listado de ofertas activas a no estar paginado/no tener limite

Tiempo aprox: 30 minutos
